# myembeddedgit

./: .gitignore  CMakeLists.txt  README.md
apps/uart_bench/src/: main.c
apps/uart_echo/cfg/: feature_config.h
apps/uart_echo/ioc/: BlackPill.ioc  Readme.txt
apps/uart_echo/keil/: README_keil.txt  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_it.h  uart_echo.uvprojx
apps/uart_echo/src/: main.c
apps/uart_echo_rtos/keil/: uart_echo_rtos.uvprojx
apps/uart_echo_rtos/src/: main.c
core/: CMakeLists.txt
core/include/core/: assert.h  bitops.h  cbuf.h  clock_iface.h  err.h  log.h  os_iface.h  uart_iface.h
core/src/: cbuf.c  log.c  timebase.c
docs/: memory_placement.md  module_ids.md
platform/boards/board_selected/: README.txt
platform/boards/stm32f103-nucleo/: board.c  board.h
platform/boards/stm32f401rc-64/: board.c  board.h
platform/boards/stm32f407-BlackPill/: board.c  board.h
platform/boards/stm32f407-custom/: board.c  board.h
platform/boards/stm32f767-disco/: board.c  board.h
platform/mcu/stm32f1/include/: mcu_uart.h
platform/mcu/stm32f1/src/: mcu_uart_buffers_default.c  mcu_uart_stm32f1.c
platform/mcu/stm32f4/include/: mcu_uart.h
platform/mcu/stm32f4/src/: mcu_uart_buffers_default.c  mcu_uart_stm32f4.c
platform/mcu/stm32f7/include/: mcu_uart.h
services/: CMakeLists.txt
services/at_engine/include/: at_engine.h
services/at_engine/src/: at_engine.c
tooling/linker/armcc/: uartbufs.sct
tooling/linker/gcc/: uartbufs.ld
tooling/scripts/: check_includes.py
tooling/templates/: c_header.h.tpl  c_source.c.tpl
(+6 files in other folders)
